# device-checkout-rs

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md
migrations/2021-08-05-003655_custom_owners/: down.sql  up.sql
migrations/2022-02-07-024552_pool-description/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  models.rs  pool.rs  routes.rs  schema.rs
src/utils/: cmdline.rs  logging.rs  mod.rs  slack.rs
templates/: devices.html.hbs  edit_custom_owners.html.hbs  edit_pools.html.hbs
tests/: exec.rs  integration.rs
