[package]
name = "device-checkout"
version = "0.3.0"
authors = ["Toby Smith <toby@tismith.id.au>"]
license = "MIT"
edition = "2018"

[profile.release]
lto = true

[dependencies]
failure = "0.1.5"
log = "0.4.6"
stderrlog = "0.4.1"
clap = "2.32.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
diesel_migrations = "1.2.0"
exitfailure = "0.5.1"
validator = "0.8.0"
validator_derive = "0.8.0"
rand = "0.7"
slack = "0.25.0"
reqwest = { version = "0.10.10", features = ["json"] }
dotenv = "0.15.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.3.3"
features = ["sqlite", "chrono", "r2d2"]

[dependencies.diesel-derive-enum]
version = "0.4.4"
features = ["sqlite"]

[dev-dependencies]
assert_cli = "0.6"
tempfile = "3.0.5"
victoria-dom = "0.1"
